Fri Jun 22 14:50:14 UTC 2007  Ciju John  <johnc at ociweb dot com>

        * ChangeLog:
        * PROBLEM-REPORT-FORM:
        * VERSION:
        * ace/Version.h:
	  Revert to x.5.8 status.

Tue Jun 12 20:11:59 UTC 2007  Ciju John  <johnc at ociweb dot com>

        * NEWS:
          Add note regards Fedora 7 GCC 4.1.2 fix for visibility attribute
          used for singletons.

Mon Jun 11 12:40:00 UTC 2007  Simon Massey  <sma@prismtech.com>

        * ace/MMAP_Memory_Pool.cpp:
        * tests/run_test.lst:

          Fix problem in Lynxos and re-enable Test.

Fri Jun 08 08:38:00 UTC 2007  Simon Massey  <sma@prismtech.com>

        * include/makeinclude/platform_hpux_aCC.GNU:

          Problem with Change log of "Fri May 11 07:57:55 UTC 2007"
          by Johnny Willemsen <jwillemsen@remedy.nl> for
          "Improved aCC version detection check". This seems to be
          incorrect as the warning disable of 361 for aCC 3.xx at
          line 98 is now being ignored. Suspect spelling mistake of
          aC++/ANSI at line 33

Sun Jun  3 20:05:36 UTC 2007  Olli Savia  <ops@iki.fi>

        * ace/Capabilities.cpp:
        * apps/Gateway/Gateway/File_Parser.cpp:
        * apps/gperf/src/Key_List.cpp:
        * examples/Mem_Map/IO-tests/IO_Test.cpp:
          Added ACE_OS:: prefix to some plain function calls.

Fri Jun  1 22:26:39 UTC 2007  Phil Mesnier  <mesnier_p@ociweb.com>

        * ace/INET_Addr.h:
        * ace/INET_Addr.cpp:

          Added a new helper method, is_ip_equal() that compares only the
          IP address of the object and the argument. This should be used
          in place of comparing get_ip_address() values particularly when
          IPv6 may be used. This new method is weaker than the equality
          operator since that also compares port numbers. This new method
          was motivated by a need to compare the address of a recieved
          dgram to the interface addresses obtained via get_ip_interfaces.
