@@ -1,3 +1,10 @@
+Fri Jun 22 15:56:12 UTC 2007  William R. Otte  <wotte@dre.vanderbilt.edu>
+
+        * bin/make_release.py:
+        
+          Updates to fix ChangeLog entry creation and superflous packaging
+          of extra binary files in ACE+TAO and ACE+TAO+CIAO packages.
+
 Fri Jun 22 14:50:14 UTC 2007  Ciju John  <johnc at ociweb dot com>
 
         * ChangeLog:
